[tool.poetry]
name = "gst-shopify"
version = "0.1.0"
description = ""
authors = ["restlessronin <88921269+restlessronin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
